kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/006_property.inv.kmt
/* $Id: 006_property.inv.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// Test of constraints on operations
// When constraints are checked, errors

package root_package;

require kermeta

using kermeta::standard



class C1
{
	reference p1 : String
}


class C1bis 
{

}


class C2 inherits C1
{
	reference p1 : Integer
}

class C3 inherits C1
{
	property p1 : Integer
}